--- a/templates/rshop.html
+++ b/templates/rshop.html
@@ -23,7 +23,7 @@
 <div class="card-body">
 <h5 class="card-title">{{ourreward.name}}</h5>
 <p class="card-text">Price: {{ourreward.price}} points <br> </p>
-<a href="/rewards_shop" class="btn btn-primary btn-xs" onclick="return confirm ('Are you sure you want to Redeem?')">Redeem</a>
+<a href="/flask_app_rewards/rewards_shop" class="btn btn-primary btn-xs" onclick="return confirm ('Are you sure you want to Redeem?')">Redeem</a>
 
 </div>
 </div>
