--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,7 +21,7 @@
                   <div align="left">
     <h2>Data of all registered users</h2>
     {% for item in values %}
-        <p>ID: {{item.id}}, Name: {{item.username}}, Email: {{item.email}} Password: {{item.password}}</p>
+        <p>ID: {{item.id}}, Name: {{item.username}}, Email: {{item.email}}, Password: {{item.password}}, Points: {{item.points}}, Orders: {{item.ordered}}</p>
     {% endfor %}
                       </div>
                                 </div>
