--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,14 @@
         {% endfor %}
       {% endif %}
     {% endwith %}
+{% if form.recaptcha.errors %}
+    {% for error in form.recaptcha.errors %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  Recaptcha Failed!
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+    {% endfor %}
+{% endif %}
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -35,7 +43,7 @@
                         {{ form.password }}
                     </div>
                   </div>
-
+                {{ form.recaptcha }}
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                     {{ form.submit }}
                   </div>
