--- a/templates/rmanage.html
+++ b/templates/rmanage.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col md-12">
             <div class="jumbotron p-3">
-                <h2>Manage Rewards<a class="btn btn-success float-right" href="/add_rewards">Add New Rewards</a></h2>
+                <h2>Manage Rewards<a class="btn btn-success float-right" href="/flask_app_rewards/add_rewards">Add New Rewards</a></h2>
 
 <table class="table table-hover table-dark">
 <tr>
@@ -50,12 +50,4 @@
         </div>
     </div>
 </div>
-=======
-{% block title %} Reward Shop {% endblock %}
-{% block body %}
-
-<a href="/add_rewards">add rewards</a>
->>>>>>> e43af79c29e09cbf1a39370be6694f1e4249a500
-
-
 {% endblock %}
