--- a/templates/addr.html
+++ b/templates/addr.html
@@ -33,7 +33,7 @@ label {
 
 <h1>Add rewards</h1>
 <!--Add reward form-->
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
 <!-- CSRF token protect the form against CSRF attacks -->
 {{ form.hidden_tag() }}
 
@@ -48,8 +48,12 @@ label {
 
 {{ form.category.label(class="form-label") }}
 {{ form.category(class="form-control") }} <br>
+
+{{ form.rewardpic.label(class="form-label") }}
+{{ form.rewardpic(class="form-control") }} <br>
+
 <br>
-<a class="btn btn-secondary" href="/flask_app_rewards/manage_rewards">Back</a>
+<a class="btn btn-secondary" href="/manage_rewards">Back</a>
 {{ form.submit(class="btn-btn-secondary", value="Add") }}
 </form>
 
