--- a/templates/rshop.html
+++ b/templates/rshop.html
@@ -14,16 +14,24 @@
 {% endwith %}
 <h1 style="text-align:center;" >Rewards Shop</h1>
 
+<style>
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+</style>
+
 <div class="container" id="topdiv6">
 <div class="row" id="index0">
 {% for ourreward in ourrewards %}
 <div class="card m-2" style="width: 18rem;">
-<img class="card-img-top" src="/static/placeholder.jpg" alt="Card image cap">
+<img class="card-img-top" src="{{ url_for('static',filename='uploads/' + ourreward.rewardpic) }}" alt="Insert img">
 
 <div class="card-body">
 <h5 class="card-title">{{ourreward.name}}</h5>
 <p class="card-text">Price: {{ourreward.price}} points <br> </p>
-<a href="/flask_app_rewards/rewards_shop" class="btn btn-primary btn-xs" onclick="return confirm ('Are you sure you want to Redeem?')">Redeem</a>
+<a href="/rewards_shop" class="btn btn-primary btn-xs" onclick="return confirm ('Are you sure you want to Redeem?')">Redeem</a>
 
 </div>
 </div>
