--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,10 @@
         <a class="nav-link" href="/flask_app_inventory/">Update Inventory (SHLD BE ADMIN ONLY)</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/rewards_shop">Rewards Shop</a>
+        <a class="nav-link" href="/flask_app_rewards/rewards_shop">Rewards Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/manage_rewards">Update Rewards (SHLD BE ADMIN ONLY)</a>
+        <a class="nav-link" href="/flask_app_rewards/manage_rewards">Update Rewards (SHLD BE ADMIN ONLY)</a>
       </li>
             <li class="nav-item">
         <a class="nav-link" href="/flask_app_payment/checkout">Checkout</a>
