--- a/templates/rmanage.html
+++ b/templates/rmanage.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-xl-12">
             <div class="jumbotron p-2">
-                <h2>Manage Rewards<a class="btn btn-success float-right" href="/add_rewards">Add New Rewards</a></h2>
+                <h2>Manage Rewards<a class="btn btn-success float-right" href="/flask_app_rewards/add_rewards">Add New Rewards</a></h2>
 
 <table class="table table-hover table-dark">
 <tr>
