--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,6 +41,14 @@
   Orders: {{ current_user.ordered }}
 {% endif %}
     <br>
+                                                        {% if current_user.is_authenticated %}
+  Contact: {{ current_user.contact }}
+{% endif %}
+    <br>
+                                                        {% if current_user.is_authenticated %}
+  Address: {{ current_user.address }}
+{% endif %}
+    <br>
     <a href="{{url_for('change')}}">Change Password</a>
     <br>
     <a href="{{url_for('logout')}}">Press here to logout</a>
@@ -70,6 +78,9 @@
                   </div>
 
                 </form>
+                  <br>
+                                          **  Contact and Address will be queried/added during checkout **
+                        <br>
               </div>
               <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
