--- a/templates/rmanage.html
+++ b/templates/rmanage.html
@@ -37,7 +37,7 @@
     <td><img class="img-fluid" src="{{ url_for('static',filename='uploads/' + ourreward.rewardpic) }}" alt="Insert Img" style="width: auto; height: 70px;">
 </td>
     <td>{{ourreward.name}}</td>
-    <td>{{ourreward.price}} points</td>
+    <td>{{ourreward.price}} point(s)</td>
     <td>{{ourreward.quantity}}</td>
     <td>{{ourreward.category}}</td>
     <td>{{ourreward.date_added.strftime("%d/%m/%Y %H:%M:%S")}}</td>
