--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="/flask_app_rewards/manage_rewards">Update Rewards (SHLD BE ADMIN ONLY)</a>
       </li>
             <li class="nav-item">
-        <a class="nav-link" href="/flask_app_payment/checkout">Checkout</a>
+        <a class="nav-link" href="/flask_app_payment/name">Checkout</a>
       </li>
       </ul>
     </div>
