--- a/templates/additems.html
+++ b/templates/additems.html
@@ -53,7 +53,7 @@ label {
 {{ form.rewardpic(class="form-control") }} <br>
 
 <br>
-<a class="btn btn-secondary" href="/flask_app_inventory/index">Back</a>
+<a class="btn btn-secondary" href="/index">Back</a>
 {{ form.submit(class="btn-btn-secondary", value="Add") }}
 </form>
 
