--- a/templates/base.html
+++ b/templates/base.html
@@ -8,29 +8,29 @@
 </head>
 <body>
 <nav style="background-color:#212429;" class="navbar navbar-expand-md navbar-dark">
-  <a class="navbar-brand" href="/flask_app_inventory"><img src="static/navbarfinal.png" width="200" height="80"></a>
+  <a class="navbar-brand" href="/"><img src="static/navbarfinal.png" width="200" height="80"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/flask_app_inventory">Shop</a>
+        <a class="nav-link" href="/">Shop</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/dashboard">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/flask_app_inventory/index">Update Inventory (SHLD BE ADMIN ONLY)</a>
+        <a class="nav-link" href="/index">Update Inventory (SHLD BE ADMIN ONLY)</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/flask_app_rewards/rewards_shop">Rewards Shop</a>
+        <a class="nav-link" href="/rewards_shop">Rewards Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/flask_app_rewards/manage_rewards">Update Rewards (SHLD BE ADMIN ONLY)</a>
+        <a class="nav-link" href="/manage_rewards">Update Rewards (SHLD BE ADMIN ONLY)</a>
       </li>
             <li class="nav-item">
-        <a class="nav-link" href="/flask_app_payment/name">Checkout</a>
+        <a class="nav-link" href="/name">Checkout</a>
       </li>
       </ul>
     </div>
