--- a/templates/name.html
+++ b/templates/name.html
@@ -4,7 +4,7 @@
 
     <h1>Checkout Page</h1>
     <h1>Billing Information</h1>
-    <form method="POST" action="/flask_app_payment/name" >
+    <form method="POST" action="/name" >
         {{ form.hidden_tag() }}
         {{ form.address.label }}
         {{ form.address() }}
