--- a/templates/additems.html
+++ b/templates/additems.html
@@ -54,7 +54,7 @@ label {
 
 <br>
 <a class="btn btn-secondary" href="/index">Back</a>
-{{ form.submit(class="btn-btn-secondary", value="Add") }}
+{{ form.submit(class="btn btn-primary btn-xs", value="Add") }}
 </form>
 
 
