--- a/templates/updater.html
+++ b/templates/updater.html
@@ -41,7 +41,7 @@
 
 <br>
     <a class="btn btn-secondary" href="/manage_rewards">Back</a>
-{{ form.submit(class="btn-btn-secondary", value="Update") }}
+{{ form.submit(class="btn btn-primary btn-xs", value="Update") }}
 </form>
 
 <!--{% for ourreward in ourrewards %}-->
