--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block title %} Manage Rewards {% endblock %}
 {% block body %}
- {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-           <div class="alert alert-dismissible fade show alert-{{ category }}" role="alert"> {{ message }} <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+       <div class="alert alert-dismissible fade show alert-{{ category }}" role="alert"> {{ message }}
+           <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">x</span></button>
+       </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -24,60 +27,56 @@
     {% if current_user.is_authenticated %}
   Username: {{ current_user.username }}
 {% endif %}
-    <br>
+    <br><br>
         {% if current_user.is_authenticated %}
   ID: {{ current_user.id }}
 {% endif %}
-    <br>
+    <br><br>
         {% if current_user.is_authenticated %}
   Email: {{ current_user.email }}
 {% endif %}
-    <br>
+    <br><br>
                         {% if current_user.is_authenticated %}
   Points: {{ current_user.points }}
 {% endif %}
-    <br>
+    <br><br>
                                 {% if current_user.is_authenticated %}
   Orders: {{ current_user.ordered }}
 {% endif %}
-    <br>
+    <br><br>
                                                         {% if current_user.is_authenticated %}
   Contact: {{ current_user.contact }}
 {% endif %}
-    <br>
+    <br><br>
                                                         {% if current_user.is_authenticated %}
   Address: {{ current_user.address }}
 {% endif %}
-    <br>
+    <br><br>
                         {% if current_user.is_authenticated %}
   Rewards: {{ current_user.rewards }}
 {% endif %}
-    <br>
+    <br><br>
                         {% if current_user.is_authenticated %}
   Rewards Address: {{ current_user.rewardsaddress }}
 {% endif %}
-    <br>
+    <br><br>
     <a href="{{url_for('change')}}">Change Password</a>
-    <br>
+    <br><br>
     <a href="{{url_for('logout')}}">Press here to logout</a>
-    <br>
+    <br><br>
     <a href="{{url_for('delete')}}">Press here to delete email</a>
-    <br>
-    {% if current_user.id == 1 %}
-    <a href="{{url_for('admin')}}">Admin Page</a>
-    {% endif %}
-    <br>
+    <br><br>
+                         ** Contact and Address will be queried/added during checkout **
                          </div>
                   </div>
                       </div>
 
                 <form class="mx-1 mx-md-4" method="POST" action="">
-                ** Contact and Address will be queried/added during checkout **
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
 <input type="email" name="email" placeholder="Add an Email Address">
-        <input type="submit" value="submit">
+        <input class="btn btn-primary btn-xs" type="submit" value="submit">
                     </div>
                   </div>
 
