--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block title %} Manage Rewards {% endblock %}
 {% block body %}
- {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-           <div class="alert alert-dismissible fade show alert-{{ category }}" role="alert"> {{ message }} <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+       <div class="alert alert-dismissible fade show alert-{{ category }}" role="alert"> {{ message }}
+           <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">x</span></button>
+       </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -26,7 +29,7 @@
                       <label class="form-label">To delete this email address, simply type in DELETE in the box below. </label>
     <!-- EMAIL CAN BE REPLACED, DELETION IS JUST FOR PPL WHO WANT THEIR EMAIL DATA GONE -->
         <input type="text" name="delete" placeholder="type DELETE here">
-        <input type="submit" value="submit">
+        <input class="btn btn-primary btn-xs" type="submit" value="submit">
                     </div>
                   </div>
 
