--- a/templates/shop.html
+++ b/templates/shop.html
@@ -2,6 +2,17 @@
 {% block title %} Home {% endblock %}
 {% block body %}
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+       <div class="alert alert-dismissible fade show alert-{{ category }}" role="alert"> {{ message }}
+           <button type="button" class="close" data-dismiss="alert" aria-label="close">
+            <span aria-hidden="true">x</span></button>
+       </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
 <style>
     .card-img-top {
     width: 100%;
