--- a/templates/rmanage.html
+++ b/templates/rmanage.html
@@ -19,7 +19,11 @@
     <div class="row">
         <div class="col-xl-12">
             <div class="jumbotron p-2">
-                <h2>Manage Rewards<a class="btn btn-success float-right" href="/add_rewards">Add New Rewards</a></h2>
+                <h2>Manage Rewards
+                  <a class="btn btn-success float-right" href="/add_rewards">Add New Rewards</a>
+                  <a style="background-color:#D3D3D3;" class="btn float-right m-1" href="/manage_rewards/sort_desc" >↓</a>
+                  <a style="background-color:#D3D3D3;" class="btn float-right m-1" href="/manage_rewards" >↑</a>
+                </h2>
 
 <table class="table table-hover table-dark">
 <tr>
