--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Manage Rewards {% endblock %}
+{% block title %} Register {% endblock %}
 {% block body %}
 
 {% if form.username.errors %}
