--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Manage Rewards {% endblock %}
+{% block title %} Delete Email {% endblock %}
 {% block body %}
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
