--- a/templates/rshop.html
+++ b/templates/rshop.html
@@ -13,7 +13,7 @@
   {% endif %}
 {% endwith %}
 <h1 style="text-align:center;" >Rewards Shop</h1>
-
+<h3 style="text-align:center;">Points: {{current_user.points}}</h3>
 <style>
 .card-img-top {
     width: 100%;
