--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,7 +25,7 @@
     <h2>Data of all registered users</h2>
     {% for item in values %}
         <p>ID: {{item.id}} <br> Name: {{item.username}} <br> Email: {{item.email}} <br> Password: {{item.password}} <br> Points: {{item.points}} <br> Orders: {{item.ordered}}
-            <br> Address: {{item.address}} <br> Contact: {{item.contact}} <br> Rewards: {{item.rewards}} <br> Rewards Address: {{item.rewardsaddress}}</p>
+            <br> Address: {{item.address}} <br> Contact: {{item.contact}} <br> Rewards: {{item.rewards}}</p>
     {% endfor %}
                       </div>
                                 </div>
