--- a/templates/rshop.html
+++ b/templates/rshop.html
@@ -38,7 +38,7 @@
 <p class="card-text">Price: {{ourreward.price}} points <br> </p>
 
     <form action="{{url_for('redemption',price=ourreward.price)}}" method="post">
-        <button class="btn-btn-primary float-right" onclick="return confirm ('Are you sure you want to Delete?')" type="submit">Redeem</button>
+        <button class="btn-btn-primary float-right" onclick="return confirm ('Are you sure you want to Redeem?')" type="submit">Redeem</button>
     </form>
 </div>
 </div>
