--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
     {% endfor %}
   {% endif %}
 {% endwith %}
+<!--
 {% if form.recaptcha.errors %}
     {% for error in form.recaptcha.errors %}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -18,6 +19,7 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
     {% endfor %}
+-->
 {% endif %}
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -46,7 +48,7 @@
                         {{ form.password }}
                     </div>
                   </div>
-                {{ form.recaptcha }}
+                <!-- {{ form.recaptcha }} -->
                     <br>
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                     {{ form.submit (class="btn btn-primary btn-xs")}}
